--- a/stories/Stories.html
+++ b/stories/Stories.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/rrh.jpeg" class="card-img-top" alt="red-riding-hood">
+                    <img src="Images/rrh.jpeg" class="card-img-top" alt="red-riding-hood">
                     <div class="card-body">
                         <h5 class="card-title">Little Red Riding Hood</h5>
                         <p class="card-text">"Little Red Riding Hood" is a fairy tale about a girl and a
@@ -76,7 +76,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/gol.png" class="card-img-top" alt="goldilocks-and-the-three-bears">
+                    <img src="Images/gol.png" class="card-img-top" alt="goldilocks-and-the-three-bears">
                     <div class="card-body">
                         <h5 class="card-title">Goldilocks and the three Bears</h5>
                         <p class="card-text"> It is The Story of Goldilocks and the Three Bears.</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/gbm.jpg" class="card-img-top" alt="gingerbread-mouse">
+                    <img src="Images/gbm.jpg" class="card-img-top" alt="gingerbread-mouse">
                     <div class="card-body">
                         <h5 class="card-title">Gingerbread Mouse</h5>
                         <p class="card-text">It is the story of a mouse  in search of a new home at Christmas time.</p>
@@ -99,7 +99,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/sb.jpg" class="card-img-top" alt="sleeping-beauty">
+                    <img src="Images/sb.jpg" class="card-img-top" alt="sleeping-beauty">
                     <div class="card-body">
                         <h5 class="card-title">Sleeping Beauty</h5>
                         <p class="card-text">It is the story of a princess called sleeping beauty who remains in sleep.</p>
@@ -120,7 +120,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/TCM.jpg" class="card-img-top" alt="town-mouse-and-country-mouse">
+                    <img src="Images/TCM.jpg" class="card-img-top" alt="town-mouse-and-country-mouse">
                     <div class="card-body">
                         <h5 class="card-title">Town Mouse and Country Mouse</h5>
                         <p class="card-text">It is the story of a town mouse and a city mouse.</p>
@@ -130,7 +130,7 @@
             </div>
             <div class="col-sm-3">
                 <div class="card mt-5" style="width: 18rem;">
-                    <img src="images/rp.jpg" class="card-img-top" alt="letters-from-rapunzel">
+                    <img src="Images/rp.jpg" class="card-img-top" alt="letters-from-rapunzel">
                     <div class="card-body">
                         <h5 class="card-title">Letters from Rapunzel</h5>
                         <p class="card-text"> It is the story of rapunzel and her letters.</p>
